// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden snapshot — fixed score with pinned referenceDate > backend JD vs backend resume: score is stable 1`] = `
{
  "achievementStrength": {
    "strong": 0,
    "weak": 0,
  },
  "breakdown": {
    "education": 100,
    "experience": 100,
    "keywords": 100,
    "parseability": 85,
    "skills": 59,
  },
  "detectedSections": [
    "summary",
    "skills",
    "experience",
    "education",
  ],
  "employmentGaps": [],
  "experienceEntries": [
    {
      "dates": {
        "durationInMonths": 48,
        "end": "Dec 2022",
        "endMonth": 12,
        "endYear": 2022,
        "raw": "Software Engineer (Jan 2019 - Dec 2022)",
        "start": "Jan 2019",
        "startMonth": 1,
        "startYear": 2019,
      },
      "description": "Software Engineer (Jan 2019 - Dec 2022)",
      "skills": [],
      "title": "Software Engineer",
    },
  ],
  "experienceGap": 0,
  "keywordWeights": [
    {
      "category": "concept",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 1,
      "term": "backend",
    },
    {
      "category": "tool",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 1,
      "term": "docker",
    },
    {
      "category": "technical",
      "importance": 1,
      "jdWeight": 1,
      "resumeWeight": 2,
      "term": "engineer",
    },
    {
      "category": "technical",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 1,
      "term": "python",
    },
    {
      "category": "tool",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 1,
      "term": "sql",
    },
  ],
  "keywordsByCategory": {
    "concept": {
      "matched": [
        "backend",
      ],
      "missing": [],
    },
    "domain": {
      "matched": [],
      "missing": [],
    },
    "marketing": {
      "matched": [],
      "missing": [],
    },
    "soft": {
      "matched": [],
      "missing": [],
    },
    "technical": {
      "matched": [
        "engineer",
        "python",
      ],
      "missing": [],
    },
    "tool": {
      "matched": [
        "docker",
        "sql",
      ],
      "missing": [],
    },
  },
  "matchedKeywords": [
    "backend",
    "docker",
    "engineer",
    "python",
    "sql",
  ],
  "matchedLanguages": [],
  "matchedSkills": [
    "backend",
    "docker",
    "python",
    "sql",
  ],
  "missingKeywords": [],
  "missingLanguages": [],
  "missingSkills": [
    "javascript",
    "node",
    "react",
    "typescript",
  ],
  "overusedKeywords": [
    "backend",
    "docker",
    "engineer",
    "python",
    "sql",
  ],
  "parseabilityReport": {
    "contactParseable": false,
    "deductions": [
      {
        "points": 15,
        "reason": "No parseable contact email detected",
      },
    ],
    "detectedSectionCount": 4,
    "hasMultiColumn": false,
    "hasSpecialChars": false,
    "hasTables": false,
    "likelyScanned": false,
    "nonStandardBullets": false,
  },
  "parsedExperienceYears": 4,
  "perSkillExperience": [],
  "score": 49.75,
  "seniorityMatch": {
    "met": true,
    "required": undefined,
    "resume": undefined,
  },
  "skillExperienceGaps": [
    {
      "requiredYears": 3,
      "resumeYears": 0,
      "skill": "docker",
    },
    {
      "requiredYears": 3,
      "resumeYears": 0,
      "skill": "sql",
    },
  ],
  "suggestions": [
    "Highlight these required skills: javascript, node, react, typescript",
    "Avoid keyword stuffing for: backend, docker, engineer, python, sql",
    "Strengthen bullet points with impact verbs (led, built, improved, delivered).",
    "Add a clearly formatted email address near the top of your resume so ATS and recruiters can contact you.",
    "The role asks for 3+ years of docker; make that duration explicit in your experience section.",
    "The role asks for 3+ years of sql; make that duration explicit in your experience section.",
  ],
  "warnings": [
    "Keyword stuffing detected for: backend, docker, engineer, python, sql (penalty 25)",
    "Missing contact email (penalty 12)",
    "No email address detected — most ATS require a parseable contact email",
  ],
}
`;

exports[`golden snapshot — fixed score with pinned referenceDate > frontend JD vs full-stack resume: score is stable 1`] = `
{
  "achievementStrength": {
    "strong": 0,
    "weak": 0,
  },
  "breakdown": {
    "education": 100,
    "experience": 100,
    "keywords": 43.75,
    "parseability": 85,
    "skills": 49.99999999999999,
  },
  "detectedSections": [
    "summary",
    "skills",
    "experience",
    "education",
  ],
  "employmentGaps": [],
  "experienceEntries": [
    {
      "dates": {
        "durationInMonths": 73,
        "end": "present",
        "endMonth": 1,
        "endYear": 2026,
        "raw": "Senior Engineer at ExampleCorp (Jan 2020 - Present) - Built React apps and APIs.",
        "start": "Jan 2020",
        "startMonth": 1,
        "startYear": 2020,
      },
      "description": "Senior Engineer at ExampleCorp (Jan 2020 - Present) - Built React apps and APIs.",
      "skills": [
        "react",
      ],
      "title": "Senior Engineer at ExampleCorp",
    },
  ],
  "experienceGap": 0,
  "keywordWeights": [
    {
      "category": "concept",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 0,
      "term": "accessibility",
    },
    {
      "category": "technical",
      "importance": 1,
      "jdWeight": 1,
      "resumeWeight": 2,
      "term": "engineer",
    },
    {
      "category": "concept",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 0,
      "term": "frontend",
    },
    {
      "category": "tool",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 0,
      "term": "graphql",
    },
    {
      "category": "technical",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 2,
      "term": "react",
    },
    {
      "category": "technical",
      "importance": 3,
      "jdWeight": 3,
      "resumeWeight": 1,
      "term": "typescript",
    },
  ],
  "keywordsByCategory": {
    "concept": {
      "matched": [],
      "missing": [
        "accessibility",
        "frontend",
      ],
    },
    "domain": {
      "matched": [],
      "missing": [],
    },
    "marketing": {
      "matched": [],
      "missing": [],
    },
    "soft": {
      "matched": [],
      "missing": [],
    },
    "technical": {
      "matched": [
        "engineer",
        "react",
        "typescript",
      ],
      "missing": [],
    },
    "tool": {
      "matched": [],
      "missing": [
        "graphql",
      ],
    },
  },
  "matchedKeywords": [
    "engineer",
    "react",
    "typescript",
  ],
  "matchedLanguages": [],
  "matchedSkills": [
    "javascript",
    "node",
    "react",
    "typescript",
  ],
  "missingKeywords": [
    "accessibility",
    "frontend",
    "graphql",
  ],
  "missingLanguages": [],
  "missingSkills": [
    "accessibility",
    "frontend",
    "graphql",
  ],
  "overusedKeywords": [
    "engineer",
    "react",
    "typescript",
  ],
  "parseabilityReport": {
    "contactParseable": false,
    "deductions": [
      {
        "points": 15,
        "reason": "No parseable contact email detected",
      },
    ],
    "detectedSectionCount": 4,
    "hasMultiColumn": false,
    "hasSpecialChars": false,
    "hasTables": false,
    "likelyScanned": false,
    "nonStandardBullets": false,
  },
  "parsedExperienceYears": 6.08,
  "perSkillExperience": [
    {
      "skill": "react",
      "years": 6.08,
    },
  ],
  "score": 43.44,
  "seniorityMatch": {
    "met": true,
    "required": undefined,
    "resume": "senior",
  },
  "skillExperienceGaps": [],
  "suggestions": [
    "Highlight these required skills: accessibility, frontend, graphql",
    "Incorporate job-specific keywords: accessibility, frontend, graphql",
    "Avoid keyword stuffing for: engineer, react, typescript",
    "Strengthen bullet points with impact verbs (led, built, improved, delivered).",
    "Add a clearly formatted email address near the top of your resume so ATS and recruiters can contact you.",
  ],
  "warnings": [
    "Keyword stuffing detected for: engineer, react, typescript (penalty 15)",
    "Missing contact email (penalty 12)",
    "No email address detected — most ATS require a parseable contact email",
  ],
}
`;
